# PantzAI

./: .gitignore  LICENSE  README.md  VQE_2q_FakeManila(old_version).py  VQE_2q_FakeManila.ipynb  VQE_2q_FakeManila.py  graph.py  pyproject.toml  results.txt  setup.py
.ipynb_checkpoints/: VQE_2q_FakeManila-checkpoint.ipynb  VQE_2q_FakeManila-checkpoint.py  pyproject-checkpoint.toml  requirements-checkpoint.txt
PantzAI/: VQE_2q_FakeManila.py  VQE_4q_FakeManila.py  __init__.py
PantzAI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: vqe_2q_ansatzRL.py  vqe_4q_ansatzRL.py
