[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PantzAI"
version = "0.1"
description = "Implementation of RL techniques for defining pulse-based ansatz in VQE processes."
readme = "README.md"
long_description_content_type = "text/markdown"
requires-python = ">=3.6"
authors = [
    {name = "Riccardo Marega", email = "maregariccardo.rm0@gmail.com"}
]
homepage = "https://github.com/RiCkymare00/PantzAI"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.dependencies]
absl-py = "==2.1.0"
ale-py = "==0.8.1"
annotated-types = "==0.7.0"
anyio = "==4.1.0"
argon2-cffi = "==23.1.0"
argon2-cffi-bindings = "==21.2.0"
arrow = "==1.3.0"
asttokens = "==2.4.1"
astunparse = "==1.6.3"
async-lru = "==2.0.4"
attrs = "==23.1.0"
AutoROM = "==0.6.1"
AutoROM.accept-rom-license = "==0.6.1"
Babel = "==2.13.1"
backend = "==0.2.4.1"
beautifulsoup4 = "==4.12.2"
bleach = "==6.1.0"
box2d-py = "==2.3.5"
certifi = "==2023.11.17"
cffi = "==1.16.0"
charset-normalizer = "==3.3.2"
cirq-core = "==1.3.0"
click = "==8.1.7"
cloudpickle = "==3.0.0"
colorspacious = "==1.1.2"
comm = "==0.2.0"
contourpy = "==1.2.0"
cryptography = "==41.0.7"
cycler = "==0.12.1"
Cython = "==3.0.11"
debugpy = "==1.8.0"
decorator = "==5.1.1"
defusedxml = "==0.7.1"
deprecation = "==2.1.0"
dill = "==0.3.7"
duet = "==0.2.9"
exceptiongroup = "==1.2.0"
executing = "==2.0.1"
Farama-Notifications = "==0.0.4"
fasteners = "==0.19"
fastjsonschema = "==2.19.0"
filelock = "==3.15.4"
flatbuffers = "==24.3.25"
fonttools = "==4.45.1"
fqdn = "==1.5.1"
fsspec = "==2024.6.1"
gast = "==0.6.0"
glfw = "==2.7.0"
google-pasta = "==0.2.0"
graphviz = "==0.20.3"
grpcio = "==1.65.5"
gym = "==0.26.2"
gym-notices = "==0.0.8"
gymnasium = "==0.29.1"
h5py = "==3.10.0"
ibm-cloud-sdk-core = "==3.20.1"
ibm-platform-services = "==0.54.0"
idna = "==3.6"
imageio = "==2.35.1"
importlib_resources = "==6.4.3"
ipykernel = "==6.27.1"
ipython = "==8.18.1"
isoduration = "==20.11.0"
jax = "==0.4.33"
jaxlib = "==0.4.33"
jedi = "==0.19.1"
Jinja2 = "==3.1.2"
json5 = "==0.9.14"
jsonpointer = "==2.4"
jsonschema = "==4.20.0"
jsonschema-specifications = "==2023.11.1"
jupyter-events = "==0.9.0"
jupyter-lsp = "==2.2.1"
jupyter_client = "==8.6.0"
jupyter_core = "==5.5.0"
jupyter_server = "==2.11.1"
jupyter_server_terminals = "==0.4.4"
jupyterlab = "==4.0.9"
jupyterlab_pygments = "==0.3.0"
jupyterlab_server = "==2.25.2"
keras = "==3.5.0"
kiwisolver = "==1.4.5"
libclang = "==18.1.1"
Markdown = "==3.7"
markdown-it-py = "==3.0.0"
MarkupSafe = "==2.1.3"
matplotlib = "==3.8.2"
matplotlib-inline = "==0.1.6"
mdurl = "==0.1.2"
mistune = "==3.0.2"
ml-dtypes = "==0.3.1"
mpmath = "==1.3.0"
mujoco-py = "==2.1.2.14"
multiset = "==3.0.1"
namex = "==0.0.8"
nbclient = "==0.9.0"
nbconvert = "==7.11.0"
nbformat = "==5.9.2"
nest-asyncio = "==1.5.8"
networkx = "==3.2.1"
notebook = "==7.0.6"
notebook_shim = "==0.2.3"
ntlm-auth = "==1.5.0"
numpy = "==1.23.5"
nvidia-cublas-cu12 = "==12.1.3.1"
nvidia-cuda-cupti-cu12 = "==12.1.105"
nvidia-cuda-nvrtc-cu12 = "==12.1.105"
nvidia-cuda-runtime-cu12 = "==12.1.105"
nvidia-cudnn-cu12 = "==9.1.0.70"
nvidia-cufft-cu12 = "==11.0.2.54"
nvidia-curand-cu12 = "==10.3.2.106"
nvidia-cusolver-cu12 = "==11.4.5.107"
nvidia-cusparse-cu12 = "==12.1.0.106"
nvidia-nccl-cu12 = "==2.20.5"
nvidia-nvjitlink-cu12 = "==12.6.20"
nvidia-nvtx-cu12 = "==12.1.105"
opencv-python = "==4.10.0.84"
openfermion = "==1.6.0"
opt-einsum = "==3.3.0"
optree = "==0.12.1"
overrides = "==7.4.0"
packaging = "==23.2"
panda = "==0.3.1"
pandas = "==2.1.4"
pandocfilters = "==1.5.0"
parso = "==0.8.3"
pbr = "==6.0.0"
pexpect = "==4.9.0"
Pillow = "==10.1.0"
platformdirs = "==4.0.0"
plottools = "==0.2.0"
ply = "==3.11"
prometheus-client = "==0.19.0"
prompt-toolkit = "==3.0.41"
protobuf = "==4.25.4"
psutil = "==5.9.6"
ptyprocess = "==0.7.0"
PubChemPy = "==1.0.4"
pure-eval = "==0.2.2"
pycparser = "==2.21"
pydantic = "==2.7.4"
pydantic_core = "==2.18.4"
pygame = "==2.1.0"
Pygments = "==2.17.2"
PyJWT = "==2.8.0"
pylatexenc = "==2.10"
pyparsing = "==3.1.1"
pyscf = "==2.4.0"
python-dateutil = "==2.8.2"
python-json-logger = "==2.0.7"
pytz = "==2023.3.post1"
PyYAML = "==6.0.1"
pyzmq = "==25.1.1"
qiskit = "==0.45.0"
qiskit-ibmq-provider = "==0.20.1"
qiskit-terra = "==0.45.0"
qutip = "==4.7.3"
QtAwesome = "==1.3.7"
QtPy = "==2.6.2"
ratelimiter = "==1.3.1"
requests = "==2.31.2"
requests-ntlm = "==1.1.0"
retry = "==1.3.3"
retrying = "==1.3.4"
rsa = "==4.9.3"
scipy = "==1.11.4"
seaborn = "==0.12.0"
selectors2 = "==2.0.2"
send2trash = "==1.10.0"
six = "==1.16.0"
sniffio = "==1.4.0"
soupsieve = "==2.5"
sqlparse = "==0.4.4"
stack-data = "==0.7.0"
sympy = "==1.12"
tacotron2 = "==2.0.2.post1"
tbb = "==2024.5.0"
tenacity = "==8.2.3"
tensorflow = "==2.14.1"
tensorflow-estimator = "==2.14.1"
tftb = "==0.1.6"
text-unidecode = "==1.3"
toolz = "==0.12.1"
torch = "==2.2.1"
tornado = "==6.3.2"
tqdm = "==4.68.0"
traitlets = "==5.13.0"
trio = "==0.23.1"
typed-ast = "==2.1.1"
types-retry = "==0.9.10.11"
typing_extensions = "==4.9.0"
urllib3 = "==2.4.3"
virtualenv = "==20.24.1"
webcolors = "==1.12.0"
webencodings = "==0.5.1"
websocket-client = "==2.1.1"
Werkzeug = "==3.1.0"
wrapt = "==1.15.1"
xlrd = "==1.2.0"
xmltodict = "==0.13.0"
zipp = "==4.3.0"

