[project]
name = "PantzAI"
version = "1.0.1"
description = "Implementation of RL techniques for defining pulse-based ansatz in VQE processes."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Riccardo Marega", email = "maregariccardo.rm0@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/RiCkymare00/PantzAI"

